# documentation

./: .gitmodules  README.md  SUMMARY.md  book.toml
.github/workflows/: main.yml  pages.yml
cbor/: dectris-compression-tag.md
filewriter/: README.md
filewriter_v2/: README.md
stream_v2/: README.md
stream_v2/examples/: CMakeLists.txt  README.md  client.py  example.c  stream2.c  stream2.h
stream_v2/test_data/r500k_bm_bslz4_16bit/: 000001.cbor  000002.cbor  000003.cbor  000004.cbor  000005.cbor  000006.cbor  000007.cbor  000008.cbor  000009.cbor  000010.cbor  000011.cbor
stream_v2/test_data/r500k_bm_bslz4_32bit/: 000001.cbor  000002.cbor  000003.cbor  000004.cbor  000005.cbor  000006.cbor  000007.cbor  000008.cbor  000009.cbor  000010.cbor  000011.cbor
stream_v2/test_data/r500k_bm_bslz4_8bit/: 000001.cbor  000002.cbor  000003.cbor  000004.cbor  000005.cbor  000006.cbor  000007.cbor  000008.cbor  000009.cbor  000010.cbor  000011.cbor
stream_v2/test_data/r500k_bm_lz4_16bit/: 000001.cbor  000002.cbor  000003.cbor  000004.cbor  000005.cbor  000006.cbor  000007.cbor  000008.cbor  000009.cbor  000010.cbor  000011.cbor
stream_v2/test_data/r500k_bm_lz4_32bit/: 000011.cbor
stream_v2/test_data/r500k_bm_lz4_8bit/: 000001.cbor  000002.cbor  000003.cbor  000004.cbor  000005.cbor  000006.cbor  000007.cbor  000008.cbor  000009.cbor  000010.cbor  000011.cbor
theme/: custom.css
